--- a/index.ipynb
+++ b/index.ipynb
@@ -601,7 +601,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sns.lmplot(x='total_bill', y='tip', hue='smoker', data=tips)"
+   ]
   },
   {
    "cell_type": "markdown",
