Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -602,7 +602,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.lmplot(x='total_bill', y='tip', hue='smoker', data=tips)"
+    "sns.lmplot(x='total_bill', y='tip', hue='smoker',column='time', row=;se data=tips)"
    ]
   },
   {
