--- a/index.ipynb
+++ b/index.ipynb
@@ -598,11 +598,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-11-e9827b584e9a>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-e9827b584e9a>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    sns.lmplot(x='total_bill', y='tip', hue='smoker',column='time', row='sex' data=tips)\u001b[0m\n\u001b[0m                                                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "sns.lmplot(x='total_bill', y='tip', hue='smoker',column='time', row=;se data=tips)"
+    "sns.lmplot(x='total_bill', y='tip', hue='smoker',column='time', row='sex' data=tips)"
    ]
   },
   {
