Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -631,7 +631,7 @@
     }
    ],
    "source": [
-    "sns.lmplot(x='total_bill', y='tip', hue='smoker',col='time', row='sex', data=tips)"
+    "sns.lmplot(x='total_bill', y='tip', hue='smoker',col='ti', row='sex', data=tips)"
    ]
   },
   {
